# symb-lib

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  linecount
scripts/: fmt.sh  linecount.sh  mkhpp.sh
src/exe/: example.cpp  main.cpp
src/symblib/: Config.h  Nodes.h  Types.h
src/symblib/aast/expression/: BinaryExpression.h  Const.cpp  Const.h  Diff.cpp  Diff.h  Div.cpp  Div.h  Empty.h  Equality.cpp  Equality.h  ExpressionBase.h  ExpressionCategory.h  ExpressionType.h  IExpression.h  IExpressionHolder.h  Neg.cpp  Neg.h  NthExpression.h  Prod.cpp  Prod.h  Sum.cpp  Sum.h  UnaryExpression.h  Var.cpp  Var.h
src/symblib/aast/tree/: AST.cpp  AST.h  NodeIterator.cpp  NodeIterator.h
src/symblib/classlib/: memory.h  utils.h
src/symblib/manager/: ExpressionManager.h
src/symblib/node/: AST.h  BinaryExpressionBase.cpp  BinaryExpressionBase.h  Const.cpp  Const.h  Diff.cpp  Diff.h  Div.cpp  Div.h  Empty.h  Equality.cpp  Equality.h  ExpressionBase.cpp  ExpressionBase.h  IExpression.h  Neg.cpp  Neg.h  NodeIterator.cpp  NodeIterator.h  Prod.cpp  Prod.h  Sum.cpp  Sum.h  UnaryExpressionBase.cpp  UnaryExpressionBase.h  Var.cpp  Var.h  node.h
src/symblib/parser/: AstWalker.cpp  AstWalker.h  CMakeLists.txt  Grammar.h  Iast.h  Location.h  Parser.h  Walker.h
src/symblib/parser/boost_parser/: AstWalker.cpp  AstWalker.h  Grammar.h  Iast.h  Parser.h  Walker.h
src/symblib/parser/lexer/: Lexer.cpp  Lexer.h  Token.h
src/symblib/parser/parser/: Parser.cpp  Parser.h
src/symblib/processor/: BinaryProcessorBase.cpp  BinaryProcessorBase.h  ExpressionProcessor.cpp  ExpressionProcessor.h  IProcessorInner.h  SumProcessor.cpp  SumProcessor.h
symb_lib/: CMakeLists.txt  symb_lib.sln
symb_lib/exe/: example.cpp  exe.vcxproj  main.cpp
symb_lib/symb_lib/: symb_lib.vcxproj  symb_lib.vcxproj.filters
symb_lib/symb_lib/manager/: FunctionManager.cpp
symb_lib/symb_lib/node/: BinaryExpressionBase.cpp  BinaryExpressionBase.h  Const.cpp  Const.h  Diff.cpp  Div.h  IBinaryExpression.h  IUnaryExpression.h  Prod.cpp  Prod.h  UnaryExpressionBase.h
symb_lib/symb_lib/parser/: Grammar.cpp  Grammar.h  Iast.h
symb_lib/symb_lib/project_src/: Types.h
symb_lib/symb_lib/project_src/manager/: FunctionManager.cpp  FunctionManager.h
symb_lib/symb_lib/project_src/node/: BinaryExpressionBase.cpp  BinaryExpressionBase.h  BinaryFunctionBase.cpp  BinaryFunctionBase.h  Const - копия.cpp  Const - копия.h  Const.cpp  Const.h  Diff.cpp  Diff.h  Div.cpp  Div.h  ExpressionBase.h  IBinaryExpression.h  IBinaryFunction.h  IExpression.h  IFunction.h  IUnaryExpression.h  IUnaryFunction.h  Prod.cpp  Prod.h  Sum.cpp  Sum.h  Summ.cpp  Summ.h  (+4 more)
test/: CMakeLists.txt  TestLexer.cpp  TestParser.cpp
(+5 files in other folders)
